--- a/src/_assets/css/_layout.scss
+++ b/src/_assets/css/_layout.scss
@@ -188,11 +188,6 @@
     }
 }
 
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-}
-
 .post-link {
     display: block;
     font-size: 24px;
